--- a/SecureHub/Realestate/package.json
+++ b/SecureHub/Realestate/package.json
@@ -13,12 +13,14 @@
     "bip39": "^3.1.0",
     "body-parser": "^1.20.3",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.7",
     "cors": "^2.8.5",
     "ethers": "^6.13.3",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.26.1",
